src/objects/BMCServiceDesk__SYSNode__c.object
<CustomObject>
    <description>This object allows you to store link details for navigators.</description>
    <fields>
        <fullName>BMCServiceDesk__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Level__c</fullName>
        <label>Node Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Navigator__c</fullName>
        <label>FKNavigator</label>
        <referenceTo>BMCServiceDesk__SYSNavigator__c</referenceTo>
        <relationshipLabel>SYS Nodes</relationshipLabel>
        <relationshipName>Nodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__PageReference__c</fullName>
        <label>Page Reference</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKParentNode</label>
        <referenceTo>BMCServiceDesk__SYSNode__c</referenceTo>
        <relationshipLabel>SYS Nodes</relationshipLabel>
        <relationshipName>Nodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Section__c</fullName>
        <label>Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Workspaces</fullName>
                    <default>true</default>
                    <label>Workspaces</label>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Tip__c</fullName>
        <label>Tip</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Navigator Links</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <columns>BMCServiceDesk__Navigator__c</columns>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Parent__c</columns>
        <columns>BMCServiceDesk__Level__c</columns>
        <columns>BMCServiceDesk__Index__c</columns>
        <columns>BMCServiceDesk__PageReference__c</columns>
        <columns>BMCServiceDesk__Tip__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BMCServiceDesk__All1</fullName>
        <columns>BMCServiceDesk__PageReference__c</columns>
        <columns>NAME</columns>
        <columns>BMCServiceDesk__Navigator__c</columns>
        <columns>BMCServiceDesk__Parent__c</columns>
        <columns>BMCServiceDesk__Index__c</columns>
        <columns>BMCServiceDesk__Level__c</columns>
        <columns>BMCServiceDesk__Tip__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SYS Node Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSNodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>